--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.15.3",
     "axios": "^1.6.8",
+    "cookie-parser": "^1.4.6",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "package": "^1.0.1",
     "query-string": "^9.0.0",
