--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.15.3",
     "axios": "^1.6.8",
     "cookie-parser": "^1.4.6",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
@@ -35,6 +36,7 @@
     "sass": "^1.72.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "scripts": {
