--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
+    "i18next": "^23.11.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "package": "^1.0.1",
@@ -28,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
+    "react-i18next": "^14.1.0",
     "react-icon": "^1.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
