--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.3.4",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^2.2.2",
+    "@syncfusion/ej2-react-pdfviewer": "^25.1.39",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,13 +27,16 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "package": "^1.0.1",
+    "pdf-lib": "^1.17.1",
     "pdfmake": "^0.2.10",
+    "pspdfkit": "^2024.3.0",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
     "react-i18next": "^14.1.0",
     "react-icon": "^1.0.0",
+    "react-pdf": "^7.7.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
