--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^5.15.3",
     "axios": "^1.6.8",
     "cookie-parser": "^1.4.6",
+    "dayjs": "^1.11.10",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
