--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-hook-form": "^7.51.1",
     "react-i18next": "^14.1.0",
     "react-icon": "^1.0.0",
+    "react-icons": "^5.1.0",
     "react-pdf": "^7.7.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
